--- a/templates/cornouaille.tex
+++ b/templates/cornouaille.tex
@@ -390,6 +390,7 @@ $else$
 \usepackage{footnotebackref}
 $endif$
 $if(graphics)$
+\usepackage{graphicx}
 \makeatletter
 \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
 \def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
