--- a/templates/dccor.tex
+++ b/templates/dccor.tex
@@ -1,5 +1,7 @@
 \documentclass{cornouaille}
-
+\newcommand{\passthrough}[1]{#1}
+\lstset{defaultdialect=[5.3]Lua}
+\lstset{defaultdialect=[x86masm]Assembler}
 \begin{document}
 
 $body$
