--- a/templates/dccor.tex
+++ b/templates/dccor.tex
@@ -2,6 +2,9 @@
 \newcommand{\passthrough}[1]{#1}
 \lstset{defaultdialect=[5.3]Lua}
 \lstset{defaultdialect=[x86masm]Assembler}
+
+\providecommand{\tightlist}{%
+  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 \begin{document}
 
 $body$
