--- a/templates/dccor.tex
+++ b/templates/dccor.tex
@@ -3,8 +3,8 @@
 \lstset{defaultdialect=[5.3]Lua}
 \lstset{defaultdialect=[x86masm]Assembler}
 
-\providecommand{\tightlist}{%
-  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+\newcommand{\tightlist}{}
+
 \begin{document}
 
 $body$
